# tryme

./: README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: app.py  auth.py  db.py  schemas.py
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: CreateExam.jsx  ExamList.jsx  ImageUpload.jsx  Modal.jsx  MultiChoice.jsx  ParseSheet.jsx  QuestionsList.jsx  SingleChoice.jsx  TextSubmit.jsx
